Fixed Wrapping, Started Contact

--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ html {
 p {
     color: rgb(85, 85, 85)
 }
+h2 {
+    white-space: nowrap;
+}
 
 /* Transitions */
 a, .btn {
@@ -197,6 +200,10 @@ section {
     gap: 1rem;
 }
 
+#socials-container h2 {
+    cursor: pointer;
+}
+
 /* Icons */
 
 .icon {
@@ -335,3 +342,29 @@ article .icon {
 }
 
 /* Projects */
+ #projects {
+    position: relative;
+ }
+ .color-container {
+    border-color: rgb(163, 163, 163);
+    background-color: rgb(250, 250, 250);
+ }
+
+ .project-img {
+    border-radius: 2rem;
+    width: 90%;
+    height: 90%;
+ }
+
+ .project-title {
+    margin: 1rem;
+    color: black;
+ }
+
+ .project-btn {
+    color: black;
+    border-color: rgb(163, 163, 163);
+ }
+
+ 
+ /* Contact */
